# Uplift

./: README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/app/: _layout.tsx  auth_config.json  config.ts  feelings.tsx  login.tsx  maindisplay.tsx
client/app/(tabs)/: home.tsx  home1.tsx  index.tsx  loading.tsx  login.tsx  maindisplay.tsx  messages.tsx  settings.tsx  textbar 2.tsx  textbar.tsx  voiceflow.tsx
client/components/: Affirmations.tsx  Loading.tsx  Tinder.tsx  Voiceflow.jsx  feelings.tsx  messages.tsx  textbar.tsx
client/constants/: Colors.ts
client/hooks/: useAuthFetch.ts  useCurrentTime.ts  useGenAffirmations.ts  useMailAffirmations.ts  useStreaks.ts  useVoiceflow.js  useVoiceflow.ts
client/ios/: .xcode.env.local
client/ios/client.xcworkspace/xcuserdata/ivoryhuo.xcuserdatad/: UserInterfaceState.xcuserstate
server/: .dockerignore  .gitignore  docker-compose.yml  test-token.sh
server/app/: Cargo.toml  Dockerfile  dev-rg785djdlhv8xukf.pem
server/app/src/: dummy.rs  error.rs  logger.rs  main.rs
server/app/src/db/: database.rs  models.rs
server/app/src/web/: middleware.rs  routes.rs
server/database/: Dockerfile  initdb.sql
