[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["chrono", "macros", "postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.117"
base64 = "0.21"
tower-http = { version = "0.3.4", features = ["cors"] }
rand = "0.8"